--- a/views/404.ejs
+++ b/views/404.ejs
@@ -7,7 +7,7 @@
     .error h1 {
         font-size: 1.3rem;
         font-weight: bold;
-        color: lightskyblue;
+        color: rgba(235, 89, 57, 1);
     }
 
     .error-data {
@@ -26,7 +26,7 @@
     }
     .error-data-links a {
         text-decoration: none;
-        color: lightskyblue;
+        color: rgba(235, 89, 57, 1);
         
     }
 </style>
