--- a/views/admin/accounts/home.ejs
+++ b/views/admin/accounts/home.ejs
@@ -14,8 +14,8 @@
     }
     .account-name h5 {
         font-size: 1.7rem;
-        color: lightskyblue;
-        border-bottom: solid 1px lightskyblue;
+        color: rgba(235, 89, 57, 1);
+        border-bottom: solid 1px rgba(235, 89, 57, 1);
         padding-bottom: 8px;
     }
 
@@ -28,11 +28,11 @@
     }
     .account-links-container a {
         margin-bottom: 10px;
-        color: lightskyblue;
+        color: rgba(235, 89, 57, 1);
         text-decoration: none;
     }
     .account-links-container i {
-        color: lightskyblue;
+        color: rgba(235, 89, 57, 1);
         padding-left: 10px;
     }
 
@@ -99,7 +99,7 @@
             <div class="account-links-type">
                 <h6>Your Products</h6>
             </div>
-            <a target="_blank" href="https://dcc.godaddy.com/control/kicks101.store/settings">Domain (kicks101.store) <i class="fas fa-external-link-alt"></i></a>
+            <a target="_blank" href="https://dcc.godaddy.com/control/zunbudz.com/settings">Domain (zunbudz.com) <i class="fas fa-external-link-alt"></i></a>
         </div>
         <div class="account-links-container">
             <div class="account-links-type">
