--- a/views/admin/home.ejs
+++ b/views/admin/home.ejs
@@ -12,11 +12,11 @@
         margin-bottom: 10px;
     }
     .new-orders p span {
-        color: lightskyblue;
+        color: rgba(235, 89, 57, 1);
         font-weight: bold;
     }
     .new-orders a {
-        color: lightskyblue;
+        color: rgba(235, 89, 57, 1);
         text-decoration: none;
     }
 
@@ -28,7 +28,7 @@
     .message-alerts h5 {
         text-align: center;
         font-size: 1.3rem;
-        color: lightskyblue;
+        color: rgba(235, 89, 57, 1);
         margin-bottom: 15px;
     }
     .alerts-list {
@@ -70,7 +70,7 @@
         margin-bottom: 10px;
     }
     .alert-action a {
-        color: lightskyblue;
+        color: rgba(235, 89, 57, 1);
         text-decoration: none;
     }
     .alert-action i {
