--- a/views/admin/invoices/all-orders.ejs
+++ b/views/admin/invoices/all-orders.ejs
@@ -18,7 +18,7 @@
         padding: 10px;
     }
     .go-to-order a {
-        color: lightskyblue;
+        color: rgba(235, 89, 57, 1);
         text-decoration: none;
     }
 
