--- a/views/admin/invoices/home.ejs
+++ b/views/admin/invoices/home.ejs
@@ -23,7 +23,7 @@
         box-shadow: inset -4px -2px 4px 0px #fff, inset 2px 3px 6px 0px #d1d0e6;
         padding: 8px;
         border-radius: 6px;
-        color: lightskyblue;
+        color: rgba(235, 89, 57, 1);
         outline: none;
         border: none;
         background: #ecf0f3;
@@ -34,7 +34,7 @@
         box-shadow: -8px -4px 8px 0px #fff, 8px 4px 12px 0px #d1d0e6;
         padding: 8px;
         border-radius: 6px;
-        color: lightskyblue;
+        color: rgba(235, 89, 57, 1);
         outline: none;
         border: none;
         background: #ecf0f3;
@@ -59,7 +59,7 @@
         padding: 12px;
         margin-bottom: 5px;
         font-family: 'Roboto', sans-serif;
-        color: lightskyblue;
+        color: rgba(235, 89, 57, 1);
         font-size: 1.2rem;
     }
 
@@ -75,7 +75,7 @@
 
     .user-details-link a {
         padding: 10px;
-        color: lightskyblue;
+        color: rgba(235, 89, 57, 1);
         text-decoration: none;
     }
 
