--- a/views/admin/invoices/order-id.ejs
+++ b/views/admin/invoices/order-id.ejs
@@ -6,7 +6,7 @@
     }
     .order-placed-container h5 {
         font-size: 1.3rem;
-        color: lightskyblue;
+        color: rgba(235, 89, 57, 1);
         padding: 15px;
     }
     .stripe-order-link {
@@ -19,7 +19,7 @@
     .stripe-order-link a {
         font-size: 2rem;
         font-weight: bold;
-        color: lightskyblue;
+        color: rgba(235, 89, 57, 1);
         text-decoration: none;
     }
     .shipping-address {
@@ -29,7 +29,7 @@
     }
     .shipping-address h5 {
         font-size: 1.3rem;
-        color: lightskyblue;
+        color: rgba(235, 89, 57, 1);
         padding: 15px;
     }
     .item-container {
@@ -51,14 +51,14 @@
         font-size: 2rem;
         padding: 20px;
         text-align: center;
-        color: lightskyblue;
+        color: rgba(235, 89, 57, 1);
     }
     .item-container {
 
     }
     .item-container h5 {
         font-size: 1.3rem;
-        color: lightskyblue;
+        color: rgba(235, 89, 57, 1);
         padding: 15px;
     }
     .item-container img {
@@ -97,11 +97,11 @@
     }
     .item-link a {
         text-decoration: none;
-        color: lightskyblue;
+        color: rgba(235, 89, 57, 1);
     }
     .print-label a {
         text-decoration: none;
-        color: lightskyblue;
+        color: rgba(235, 89, 57, 1);
     }
 
     .order-placed {
@@ -116,7 +116,7 @@
     }
     .order-placed p {
         font-size: 3rem;
-        color: lightskyblue;
+        color: rgba(235, 89, 57, 1);
     }
     .order-placed a {
         font-size: 3rem;
