--- a/views/admin/invoices/print-label-single.ejs
+++ b/views/admin/invoices/print-label-single.ejs
@@ -67,7 +67,7 @@
         border: none;
         width: 50%;
         background: transparent;
-        color: lightskyblue;
+        color: rgba(235, 89, 57, 1);
         font-size: 1.3rem;
     }
     
