--- a/views/admin/invoices/reciept.ejs
+++ b/views/admin/invoices/reciept.ejs
@@ -24,7 +24,7 @@
         width: 80%;
         margin: 0 auto;
         padding-top: 20px;
-        border-bottom: solid 2px lightskyblue;
+        border-bottom: solid 2px rgba(235, 89, 57, 1);
     }
 
     .reciept-header-text {
@@ -55,7 +55,7 @@
         margin-top: 30px;
         padding-bottom: 20px;
         width: 80%;
-        border-bottom: solid 2px lightskyblue;
+        border-bottom: solid 2px rgba(235, 89, 57, 1);
     }
     .order-placed-container {
         width: 50%;
@@ -180,7 +180,7 @@
 
     .print-label a {
         text-decoration: none;
-        color: lightskyblue;
+        color: rgba(235, 89, 57, 1);
     }
 
     .order-placed {
@@ -196,7 +196,7 @@
 
     .order-placed a {
         font-size: 3rem;
-        color: lightskyblue;
+        color: rgba(235, 89, 57, 1);
         text-decoration: none;
         padding: 20px;
     }
@@ -218,7 +218,7 @@
         border: none;
         width: 50%;
         background: transparent;
-        color: lightskyblue;
+        color: rgba(235, 89, 57, 1);
         font-size: 1.3rem;
     }
 
