--- a/views/admin/manufacturer/edit.ejs
+++ b/views/admin/manufacturer/edit.ejs
@@ -1,6 +1,10 @@
 <style>
+    .admin-data-container {
+        width: 100vw;
+    }
     .input-group-image-preview {
         width: 90%;
+        max-width: 70vw;
         margin-bottom: 20px;
     }
     .input-group-image-preview p {
@@ -8,7 +12,8 @@
         padding: 10px;
     }
     .input-group-image-preview img {
-        width: 100%;
+        max-width: 100%;
+
     }
 
 
@@ -17,6 +22,10 @@
     #walkthrough {
         display: none;
     }
+    .admin-data-container {
+        width: 80vw;
+        margin-left: 20vw;
+    }
 }
 </style>
 
@@ -24,6 +33,8 @@
 
 
 <%- include('../../partials/menus/admin-nav.ejs'); %>
+
+<div class="admin-data-container">
 
 <div class="page-title">
     <h1><%= page %></h1>
@@ -58,6 +69,7 @@
     </form>
 </div>
 
+</div>
 
     
 <% } else { %>
