--- a/views/admin/manufacturer/home.ejs
+++ b/views/admin/manufacturer/home.ejs
@@ -24,7 +24,7 @@
     .item-card-main-image img{
         height: auto;
         min-height: 100px;
-        filter: drop-shadow(0 0 5px lightskyblue);
+        filter: drop-shadow(0 0 5px rgba(235, 89, 57, 1));
     }
 
     .company-actions {
@@ -46,7 +46,7 @@
         box-shadow: 4px 4px 4px 0px #d1d9e6, -4px -4px 4px 0px #fff;
         border-radius: 16px;
         width: 30%;
-        color: lightskyblue;
+        color: rgba(235, 89, 57, 1);
     }
 
 
