--- a/views/admin/users/single-user.ejs
+++ b/views/admin/users/single-user.ejs
@@ -2,7 +2,7 @@
     .page-title h5 {
         font-family: 'Roboto', sans-serif;
         font-size: 1rem;
-        color: lightskyblue;
+        color: rgba(235, 89, 57, 1);
     }
     .user-list-container {
         width: 90%;
@@ -30,7 +30,7 @@
     .user-container a {
         padding: 8px;
         text-decoration: none;
-        color: lightskyblue;
+        color: rgba(235, 89, 57, 1);
         margin-bottom: 10px;
     }
 
@@ -79,7 +79,7 @@
     .special-instructions-container h6 {
         font-family: 'Roboto', sans-serif;
         font-size: 1rem;
-        color: lightskyblue;
+        color: rgba(235, 89, 57, 1);
     }
     .special-instructions-container p {
         width: 80%; 
