--- a/views/landing-no-raffle.ejs
+++ b/views/landing-no-raffle.ejs
@@ -197,7 +197,7 @@
 
     </div>
 
-    <div id="raffleHeader">
+    <div id="raffleHeader" style="display: none;">
         <h2>Raffle</h2>
         <p style="padding: 8px;">No Current Raffle</p>
     </div>
