--- a/views/partials/core-nav.ejs
+++ b/views/partials/core-nav.ejs
@@ -33,7 +33,7 @@
 
     #coreMenu i {
         text-shadow: 0 0 2px rgba(255, 255, 255, 0.25);
-        color: rgba(6, 96, 44, 1);
+        color: rgba(235, 89, 57, 1);
         font-size: 1.3rem;
     }
  
@@ -89,12 +89,15 @@
 
     .overlay .closebtn {
         position: absolute;
-        top: 60px;
+        top: 75px;
         right: 20px;
         font-size: 2rem;
         z-index: 99940;
         padding: 8px;
         font-size: 2.2rem;
+    }
+    .overlay .closebtn i {
+        color: rgba(235, 89, 57, 1);
     }
     
 @media screen and (orientation : landscape) {
@@ -127,12 +130,11 @@
     </div>
     <div class="splitter-bar-lower"></div>
     <div class="splitter-bar"></div>
-    <div class="core-menu-container">
-    </div>
+    <div class="core-menu-container"></div>
         <div class="landscape-nav-logo">
                 <img src="/images/logo_1a1a1c.png" alt="">
         </div>
-    </div>
+</div>
     <div id="coreMenu">
 
         <span onclick="openNav()"><i id="open" class="fa-solid fa-bars"></i></span>
