--- a/views/partials/filters/products-landscape.ejs
+++ b/views/partials/filters/products-landscape.ejs
@@ -88,7 +88,7 @@
 
     .color-filter i {
         text-align: center;
-        color: lightskyblue;
+        color: rgba(235, 89, 57, 1);
         width: 100%;
         font-size: 1.5rem;
     }
@@ -271,16 +271,16 @@
         </div>
         <div class="filter-text">
                 <div class="filter-options-header">
-                    <h6>Filter By Type or Color</h6>
+                    <h6>Filter By Type</h6>
                 </div>
                 <div class="filter-options">
-                    <div class="filter-option"><a href="/products/type/Sneaker">Sneakers</a></div>
-                    <div class="filter-option"><a href="/products/type/Outerwear">Outerwear</a></div>
-                    <div class="filter-option"><a href="/products/type/T-Shirt">T-Shirts</a></div>
-                    <div class="filter-option"><a href="/products/type/Accessory">Accessories</a></div>
+                    <div class="filter-option"><a href="/products/type/Flower">Flowers</a></div>
+                    <div class="filter-option"><a href="/products/type/Oil">Oil</a></div>
+                    <div class="filter-option"><a href="/products/type/Edible">Edibles</a></div>
+                    <div class="filter-option"><a href="/products/type/Other">Other</a></div>
                 </div>
 
-                        <div class="color-filter">
+                        <div class="color-filter" style="display: none;">
                             <div class="palette">
                                 <div class="color-link">
                                     <a href="/products/color/fffafa">
