--- a/views/partials/filters/products.ejs
+++ b/views/partials/filters/products.ejs
@@ -252,12 +252,12 @@
         <div class="filter-options-header">
             <h6>Product Type</h6>
         </div>
-        <div class="filter-options">
-            <div class="filter-option"><a href="/products/type/Sneaker">Sneakers</a></div>
-            <div class="filter-option"><a href="/products/type/Outerwear">Outerwear</a></div>
-            <div class="filter-option"><a href="/products/type/T-Shirt">T-Shirts</a></div>
-            <div class="filter-option"><a href="/products/type/Accessory">Accessories</a></div>
-        </div>
+                <div class="filter-options">
+                    <div class="filter-option"><a href="/products/type/Flower">Flowers</a></div>
+                    <div class="filter-option"><a href="/products/type/Oil">Oil</a></div>
+                    <div class="filter-option"><a href="/products/type/Edible">Edibles</a></div>
+                    <div class="filter-option"><a href="/products/type/Other">Other</a></div>
+                </div>
         <div class="filter-options-header">
             <h6>Manufacturer</h6>
         </div>
@@ -269,10 +269,10 @@
                 <% }) %>
         </div>
 
-        <div class="filter-options-header">
+        <div class="filter-options-header" style="display: none;">
             <h6>Color</h6>
         </div>
-        <div class="color-filter" style="margin-top: 15px;">
+        <div class="color-filter" style="display: none; margin-top: 15px;">
             <div class="palette">
                 <div class="color-link">
                     <a href="/products/color/fffafa">
