--- a/views/user/dashboard.ejs
+++ b/views/user/dashboard.ejs
@@ -16,7 +16,7 @@
         padding: 12px;
         margin-bottom: 5px;
         font-family: 'Roboto', sans-serif;
-        color: lightskyblue;
+        color: rgba(235, 89, 57, 1);
         font-size: 1.2rem;
     }
     .user-details-link {
@@ -30,7 +30,7 @@
     }
     .user-details-link a {
         padding: 10px;
-        color: lightskyblue;
+        color: rgba(235, 89, 57, 1);
         text-decoration: none;
     }
     .user-order-history {
@@ -49,7 +49,7 @@
         padding: 12px;
         margin-bottom: 5px;
         font-family: 'Roboto', sans-serif;
-        color: lightskyblue;
+        color: rgba(235, 89, 57, 1);
         font-size: 1.2rem;
     }
 
