--- a/views/user/mailing.ejs
+++ b/views/user/mailing.ejs
@@ -21,7 +21,7 @@
         border-radius: 16px;
     }
     .current-addresses-container h5 {
-        color: lightskyblue;
+        color: rgba(235, 89, 57, 1);
         font-family: 'Roboto', sans-serif;
         font-size: 1.3rem;
         text-align: center;
@@ -47,7 +47,7 @@
     .special-instructions-container h6 {
         font-family: 'Roboto', sans-serif;
         font-size: 1rem;
-        color: lightskyblue;
+        color: rgba(235, 89, 57, 1);
     }
     .special-instructions-container p {
         width: 80%; 
@@ -60,7 +60,7 @@
     .edit-address-button a {
         font-size: 2rem;
         text-decoration: none;
-        color: lightskyblue;
+        color: rgba(235, 89, 57, 1);
         padding: 5px;
         border-radius: 16px;
         background-color: #ecf0f3;
@@ -85,7 +85,7 @@
         padding: 12px;
         margin-bottom: 5px;
         font-family: 'Roboto', sans-serif;
-        color: lightskyblue;
+        color: rgba(235, 89, 57, 1);
         font-size: 1.2rem;
     }
 
@@ -101,7 +101,7 @@
 
     .user-details-link a {
         padding: 10px;
-        color: lightskyblue;
+        color: rgba(235, 89, 57, 1);
         text-decoration: none;
     }
 
@@ -136,12 +136,12 @@
   width: 0;
   height: 0;
   border: 6px solid transparent;
-  border-color: lightskyblue transparent transparent transparent;
+  border-color: rgba(235, 89, 57, 1) transparent transparent transparent;
 }
 
 /*point the arrow upwards when the select box is open (active):*/
 .select-selected.select-arrow-active:after {
-  border-color: transparent transparent lightskyblue transparent;
+  border-color: transparent transparent rgba(235, 89, 57, 1) transparent;
   top: 7px;
 }
 
@@ -186,11 +186,11 @@
 }
 
 .same-as-selected {
-  background: lightskyblue;
+  background: rgba(235, 89, 57, 1);
   border-radius: none;
 }
 .select-items div:hover, .same-as-selected {
-    background: lightskyblue;
+    background: rgba(235, 89, 57, 1);
     color: #fff;
     border-radius: 0;
 }
