--- a/views/user/order-id.ejs
+++ b/views/user/order-id.ejs
@@ -26,7 +26,7 @@
     }
     .shipping-header {
         margin-top: 10px;
-        color: lightskyblue;
+        color: rgba(235, 89, 57, 1);
     }
     .mailing-address {
         margin-left: 15px;
@@ -38,13 +38,13 @@
         margin-top: 20px;
     }
     .order-items-header {
-        border-bottom: solid 1px lightskyblue;
+        border-bottom: solid 1px rgba(235, 89, 57, 1);
         padding-bottom: 8px;
         margin-bottom: 20px;
     }
     .order-items-header h6 {
         font-size: 1.5rem;
-        color: lightskyblue;
+        color: rgba(235, 89, 57, 1);
         text-align: center;
     }
 
@@ -60,7 +60,7 @@
     }
     .item:last-of-type {
         padding-bottom: 20px;
-        border-bottom: solid 1px lightskyblue;
+        border-bottom: solid 1px rgba(235, 89, 57, 1);
     }
     .item-photo {
         width: 20%;
@@ -83,7 +83,7 @@
     }
     .company-logo-mini img {
         width: 100%;
-        filter: drop-shadow(0 0 3px lightskyblue);
+        filter: drop-shadow(0 0 3px rgba(235, 89, 57, 1));
     }
 
 
@@ -154,7 +154,7 @@
             <div class="order-status-header">
                 <h5 style="color: green;">Order Status</h5>
             </div>
-            <p style="color: lightskyblue;">Order Shipped On:</p>
+            <p style="color: rgba(235, 89, 57, 1);">Order Shipped On:</p>
             <p style="margin-left: 15px; padding: 5px;"><%= order.shipped_date.toDateString() %></p>
             <p class="shipping-header">Shipped To:</p>
         <% } else { %>
