--- a/views/user/raffle-claim.ejs
+++ b/views/user/raffle-claim.ejs
@@ -7,7 +7,7 @@
     }
     .raffle-winner-container button {
         font-size: 2rem;
-        color: lightskyblue;
+        color: rgba(235, 89, 57, 1);
         outline: none;
         border: none;
         background: #ecf0f3;
@@ -39,7 +39,7 @@
     .raffle-ticket h3 {
         padding: 15px;
         font-size: 1.5rem;
-        color: lightskyblue;
+        color: rgba(235, 89, 57, 1);
     }
     .raffle-prize-body h4 {
         font-size: 1.4rem;
@@ -53,7 +53,7 @@
 
     }
     .raffle-prize-body-logo img {
-        filter: drop-shadow(0 0 5px lightskyblue);
+        filter: drop-shadow(0 0 5px rgba(235, 89, 57, 1));
     }
     .raffle-prize-body h5 {
         font-size: 1.3rem;
