--- a/views/user/raffle-mail.ejs
+++ b/views/user/raffle-mail.ejs
@@ -31,7 +31,7 @@
     .special-instructions-container h6 {
         font-family: 'Roboto', sans-serif;
         font-size: 1rem;
-        color: lightskyblue;
+        color: rgba(235, 89, 57, 1);
     }
     .special-instructions-container p {
         width: 80%; 
@@ -57,7 +57,7 @@
         padding: 12px;
         margin-bottom: 5px;
         font-family: 'Roboto', sans-serif;
-        color: lightskyblue;
+        color: rgba(235, 89, 57, 1);
         font-size: 1.2rem;
     }
 
@@ -73,7 +73,7 @@
 
     .user-details-link a {
         padding: 10px;
-        color: lightskyblue;
+        color: rgba(235, 89, 57, 1);
         text-decoration: none;
     }
 
@@ -108,12 +108,12 @@
   width: 0;
   height: 0;
   border: 6px solid transparent;
-  border-color: lightskyblue transparent transparent transparent;
+  border-color: rgba(235, 89, 57, 1) transparent transparent transparent;
 }
 
 /*point the arrow upwards when the select box is open (active):*/
 .select-selected.select-arrow-active:after {
-  border-color: transparent transparent lightskyblue transparent;
+  border-color: transparent transparent rgba(235, 89, 57, 1) transparent;
   top: 7px;
 }
 
@@ -158,11 +158,11 @@
 }
 
 .same-as-selected {
-  background: lightskyblue;
+  background: rgba(235, 89, 57, 1);
   border-radius: none;
 }
 .select-items div:hover, .same-as-selected {
-    background: lightskyblue;
+    background: rgba(235, 89, 57, 1);
     color: #fff;
     border-radius: 0;
 }
@@ -180,7 +180,7 @@
     border: none;
     background-color: #ecf0f3;
     font-family: 'Roboto', sans-serif;
-    color: lightskyblue;
+    color: rgba(235, 89, 57, 1);
     box-shadow: 4px 4px 6px #cbced1, -4px -4px 6px #ffffff;
 }
 </style>
