--- a/views/user/raffle-success.ejs
+++ b/views/user/raffle-success.ejs
@@ -20,12 +20,12 @@
     #raffleHeader h2 {
         font-size: 1.5rem;
         padding-left: 20px;
-        color: lightskyblue;
+        color: rgba(235, 89, 57, 1);
         font-family: 'Roboto', sans-serif;
     }
 
     #raffleHeader i {
-        color: lightskyblue;
+        color: rgba(235, 89, 57, 1);
         font-size: 2rem;
         padding-right: 20px;
     }
@@ -57,7 +57,7 @@
         text-decoration: none;
         font-size: 1.5rem;
         font-family: 'Roboto', sans-serif;
-        color: lightskyblue;
+        color: rgba(235, 89, 57, 1);
         text-shadow: 0 0 5px rgba(127, 198, 241, 0.5);
         display: block;
         transition: ease-in 0.5s;
@@ -69,7 +69,7 @@
         text-decoration: none;
         font-size: 1.5rem;
         font-family: 'Roboto', sans-serif;
-        color: lightskyblue;
+        color: rgba(235, 89, 57, 1);
         text-shadow: 0 0 5px rgba(127, 198, 241, 0.5);
         display: block;
         transition: ease-in 0.5s;
@@ -122,7 +122,7 @@
         border: none;
         font-family: 'Roboto', sans-serif;
         font-size: 1.2rem;
-        color: lightskyblue;
+        color: rgba(235, 89, 57, 1);
         background: #ecf0f3;
         border-radius: 8px;
     }
@@ -139,12 +139,12 @@
     }
     .raffle-success-container h5 {
         font-size: 1.5rem;
-        color: lightskyblue;
+        color: rgba(235, 89, 57, 1);
         margin-bottom: 15px;
     }
     .raffle-success-container h2 {
         font-size: 2rem;
-        color: lightskyblue;
+        color: rgba(235, 89, 57, 1);
         margin-bottom: 25px;
     }
     .raffle-success-container p {
@@ -155,14 +155,14 @@
         font-size: 1.1rem;
         margin-bottom: 30px;
         text-decoration: none;
-        color: lightskyblue;
+        color: rgba(235, 89, 57, 1);
     }
     .raffle-success-container button {
         margin-bottom: 100px;
         width: 90%;
         padding: 10px;
         border-radius: 16px;
-        color: lightskyblue;
+        color: rgba(235, 89, 57, 1);
         font-family: 'Roboto', sans-serif;
         font-size: 1.5rem;
         background: #ecf0f3;
@@ -186,7 +186,7 @@
 </div>
 
 
-<div id="raffleContainer" class="raffle-overlay">
+<div id="raffleContainer" class="raffle-overlay" style="display: none;">
     <a href="javascript:void(0)" class="closebtn" onclick="closeRaffle()">&times;</a>
     <div id="currentRafflePrize" class="current-raffle-prize">
         <a href="/products/manufacturer/<%= currentRafflePrize.manufacturer.id %>/product/<%= currentRafflePrize.id %>">
@@ -215,7 +215,7 @@
     </div>
 
 </div>
-<div id="raffleHeader">
+<div id="raffleHeader" style="display: none;">
     <h2>Raffle</h2>
     <p>$<%= currentRaffle.ticket_price %>/ea</p>
     <span onclick="openRaffle()"><i id="openRaffle" class="fa-solid fa-caret-up"></i></span>
