--- a/views/admin/product/order.ejs
+++ b/views/admin/product/order.ejs
@@ -41,12 +41,12 @@
         width: 0;
         height: 0;
         border: 6px solid transparent;
-        border-color: lightskyblue transparent transparent transparent;
+        border-color: rgba(235, 89, 57, 1) transparent transparent transparent;
     }
 
     /*point the arrow upwards when the select box is open (active):*/
     .select-selected.select-arrow-active:after {
-        border-color: transparent transparent lightskyblue transparent;
+        border-color: transparent transparent rgba(235, 89, 57, 1) transparent;
         top: 7px;
     }
 
@@ -90,13 +90,13 @@
     }
 
     .same-as-selected {
-        background: lightskyblue;
+        background: rgba(235, 89, 57, 1);
         border-radius: none;
     }
 
     .select-items div:hover,
     .same-as-selected {
-        background: lightskyblue;
+        background: rgba(235, 89, 57, 1);
         color: #fff;
         border-radius: 0;
     }
@@ -146,7 +146,7 @@
 .close {
   font-family: 'Roboto', sans-serif;
   font-size: 1.2rem;
-  color: lightskyblue;
+  color: rgba(235, 89, 57, 1);
   background: #ecf0f3;
 }
 
@@ -164,7 +164,7 @@
 }
 .product-update h5 {
     font-size: 1.5rem;
-    color: lightskyblue;
+    color: rgba(235, 89, 57, 1);
     margin-bottom: 10px;
 }
 .product-update p {
@@ -193,7 +193,7 @@
     box-shadow: -4px -4px 4px 0px #d1d9e6, 4px 4px 4px 0px #fff;
 }
 .product-update input::placeholder {
-    color: lightskyblue;
+    color: rgba(235, 89, 57, 1);
 }
 .product-update button {
     box-shadow: 4px 4px 4px 0px #d1d9e6, -4px -4px 4px 0px #fff;
