--- a/views/admin/raffle-no-product-selected.ejs
+++ b/views/admin/raffle-no-product-selected.ejs
@@ -35,7 +35,7 @@
     .create-raffle a {
         font-family: 'Roboto', sans-serif;
         font-size: 1.5rem;
-        color: lightskyblue;
+        color: rgba(235, 89, 57, 1);
         text-decoration: none;
         padding: 10px;
         width: 100%;
@@ -58,7 +58,7 @@
     .hold-raffle-drawing a {
         font-family: 'Roboto', sans-serif;
         font-size: 1.5rem;
-        color: lightskyblue;
+        color: rgba(235, 89, 57, 1);
         text-decoration: none;
         padding: 10px;
         width: 100%;
@@ -103,7 +103,7 @@
 
     .unclaimed-raffles-header {
         font-size: 1.5rem;
-        color: lightskyblue;
+        color: rgba(235, 89, 57, 1);
         margin-bottom: 15px;
         text-align: center;
     }
@@ -118,7 +118,7 @@
 
     .id-data {
         text-align: center;
-        border-bottom: solid 1px lightskyblue;
+        border-bottom: solid 1px rgba(235, 89, 57, 1);
         padding-bottom: 10px;
         margin-bottom: 10px;
     }
@@ -132,7 +132,7 @@
     .winner-data {
         padding-top: 10px;
 
-        border-bottom: solid 1px lightskyblue;
+        border-bottom: solid 1px rgba(235, 89, 57, 1);
         padding-bottom: 10px;
         margin-bottom: 10px;
 
@@ -150,7 +150,7 @@
 
     .winner-data a {
         text-decoration: none;
-        color: lightskyblue;
+        color: rgba(235, 89, 57, 1);
     }
 
     .item-data {
@@ -173,7 +173,7 @@
     }
 
     .item-data a {
-        color: lightskyblue;
+        color: rgba(235, 89, 57, 1);
         text-decoration: none;
     }
     .no-active-raffle-text {
