--- a/views/admin/raffle-no-raffle.ejs
+++ b/views/admin/raffle-no-raffle.ejs
@@ -25,7 +25,7 @@
     .create-raffle a {
         font-family: 'Roboto', sans-serif;
         font-size: 1.5rem;
-        color: lightskyblue;
+        color: rgba(235, 89, 57, 1);
         text-decoration: none;
         padding: 10px;
         width: 100%;
@@ -48,7 +48,7 @@
     .hold-raffle-drawing a {
         font-family: 'Roboto', sans-serif;
         font-size: 1.5rem;
-        color: lightskyblue;
+        color: rgba(235, 89, 57, 1);
         text-decoration: none;
         padding: 10px;
         width: 100%;
