--- a/views/admin/raffle-winner.ejs
+++ b/views/admin/raffle-winner.ejs
@@ -5,7 +5,7 @@
     .raffle-winner-container h5 {
         margin-bottom: 30px;
         font-size: 1.5rem;
-        color: lightskyblue;
+        color: rgba(235, 89, 57, 1);
         font-family: 'Roboto', sans-serif;
     }
     .raffle-winner-container h6 {
@@ -19,7 +19,7 @@
         padding: 10px;
     }
     .raffle-winner-container a {
-        color: lightskyblue;
+        color: rgba(235, 89, 57, 1);
         text-decoration: none;
         font-size: 1.1rem;
         margin-top: 8px;
