--- a/views/admin/raffle.ejs
+++ b/views/admin/raffle.ejs
@@ -32,7 +32,7 @@
     .create-raffle a {
         font-family: 'Roboto', sans-serif;
         font-size: 1.5rem;
-        color: lightskyblue;
+        color: rgba(235, 89, 57, 1);
         text-decoration: none;
         padding: 10px;
         width: 100%;
@@ -54,7 +54,7 @@
     .hold-raffle-drawing a {
         font-family: 'Roboto', sans-serif;
         font-size: 1.5rem;
-        color: lightskyblue;
+        color: rgba(235, 89, 57, 1);
         text-decoration: none;
         padding: 10px;
         width: 100%;
@@ -92,7 +92,7 @@
     }
     .unclaimed-raffles-header {
         font-size: 1.5rem;    
-        color: lightskyblue;
+        color: rgba(235, 89, 57, 1);
         margin-bottom: 15px;
         text-align: center;
     }
@@ -105,7 +105,7 @@
     }
     .id-data {
         text-align: center;
-        border-bottom: solid 1px lightskyblue;
+        border-bottom: solid 1px rgba(235, 89, 57, 1);
         padding-bottom: 10px;
         margin-bottom: 10px;
     }
@@ -117,7 +117,7 @@
     .winner-data {
         padding-top: 10px;
         
-        border-bottom: solid 1px lightskyblue;
+        border-bottom: solid 1px rgba(235, 89, 57, 1);
         padding-bottom: 10px;
         margin-bottom: 10px;
         
@@ -132,7 +132,7 @@
     }
     .winner-data a {
         text-decoration: none;
-        color: lightskyblue;
+        color: rgba(235, 89, 57, 1);
     }
     .item-data {
         display: flex;
@@ -151,7 +151,7 @@
         padding: 8px;
     }
     .item-data a {
-        color: lightskyblue;
+        color: rgba(235, 89, 57, 1);
         text-decoration: none;
     }
 
