--- a/views/admin/site/edit.ejs
+++ b/views/admin/site/edit.ejs
@@ -38,12 +38,12 @@
         width: 0;
         height: 0;
         border: 6px solid transparent;
-        border-color: lightskyblue transparent transparent transparent;
+        border-color: rgba(235, 89, 57, 1) transparent transparent transparent;
     }
 
     /*point the arrow upwards when the select box is open (active):*/
     .select-selected.select-arrow-active:after {
-        border-color: transparent transparent lightskyblue transparent;
+        border-color: transparent transparent rgba(235, 89, 57, 1) transparent;
         top: 7px;
     }
 
@@ -90,13 +90,13 @@
     }
 
     .same-as-selected {
-        background: lightskyblue;
+        background: rgba(235, 89, 57, 1);
         border-radius: none;
     }
 
     .select-items div:hover,
     .same-as-selected {
-        background: lightskyblue;
+        background: rgba(235, 89, 57, 1);
         color: #fff;
         border-radius: 0;
     }
@@ -134,7 +134,7 @@
 
     .contact-item a {
         text-decoration: none;
-        color: lightskyblue;
+        color: rgba(235, 89, 57, 1);
         font-size: 1.3rem;
     }
     .delete-button {
