--- a/views/cart/checkoutmailing.ejs
+++ b/views/cart/checkoutmailing.ejs
@@ -27,7 +27,7 @@
     .special-instructions-container h6 {
         font-family: 'Roboto', sans-serif;
         font-size: 1rem;
-        color: lightskyblue;
+        color: rgba(235, 89, 57, 1);
     }
 
     .special-instructions-container p {
@@ -55,7 +55,7 @@
         padding: 12px;
         margin-bottom: 5px;
         font-family: 'Roboto', sans-serif;
-        color: lightskyblue;
+        color: rgba(235, 89, 57, 1);
         font-size: 1.2rem;
     }
 
@@ -71,7 +71,7 @@
 
     .user-details-link a {
         padding: 10px;
-        color: lightskyblue;
+        color: rgba(235, 89, 57, 1);
         text-decoration: none;
     }
 
@@ -107,12 +107,12 @@
         width: 0;
         height: 0;
         border: 6px solid transparent;
-        border-color: lightskyblue transparent transparent transparent;
+        border-color: rgba(235, 89, 57, 1) transparent transparent transparent;
     }
 
     /*point the arrow upwards when the select box is open (active):*/
     .select-selected.select-arrow-active:after {
-        border-color: transparent transparent lightskyblue transparent;
+        border-color: transparent transparent rgba(235, 89, 57, 1) transparent;
         top: 7px;
     }
 
@@ -159,13 +159,13 @@
     }
 
     .same-as-selected {
-        background: lightskyblue;
+        background: rgba(235, 89, 57, 1);
         border-radius: none;
     }
 
     .select-items div:hover,
     .same-as-selected {
-        background: lightskyblue;
+        background: rgba(235, 89, 57, 1);
         color: #fff;
         border-radius: 0;
     }
@@ -178,7 +178,7 @@
 </div>
 
 <p style="text-align: center; margin-bottom: 30px; margin-top: 30px;"><a
-        style="color: lightskyblue; text-decoration: none; font-size: 1.3rem;" href="/products">Continue Shopping</a>
+        style="color: rgba(235, 89, 57, 1); text-decoration: none; font-size: 1.3rem;" href="/products">Continue Shopping</a>
 </p>
 
 
