--- a/views/cart/receipt.ejs
+++ b/views/cart/receipt.ejs
@@ -24,7 +24,7 @@
         width: 80%;
         margin: 0 auto;
         padding-top: 20px;
-        border-bottom: solid 2px lightskyblue;
+        border-bottom: solid 2px rgba(235, 89, 57, 1);
     }
 
     .reciept-header-text {
@@ -59,7 +59,7 @@
         margin-top: 30px;
         padding-bottom: 20px;
         width: 80%;
-        border-bottom: solid 2px lightskyblue;
+        border-bottom: solid 2px rgba(235, 89, 57, 1);
     }
 
     .order-placed-container {
@@ -204,7 +204,7 @@
 
     .print-label a {
         text-decoration: none;
-        color: lightskyblue;
+        color: rgba(235, 89, 57, 1);
     }
 
     .order-placed {
@@ -220,7 +220,7 @@
 
     .order-placed a {
         font-size: 3rem;
-        color: lightskyblue;
+        color: rgba(235, 89, 57, 1);
         text-decoration: none;
         padding: 20px;
     }
@@ -244,7 +244,7 @@
         border: none;
         width: 50%;
         background: transparent;
-        color: lightskyblue;
+        color: rgba(235, 89, 57, 1);
         font-size: 1.3rem;
     }
 
