--- a/views/cart/success.ejs
+++ b/views/cart/success.ejs
@@ -16,7 +16,7 @@
     }
     .link a {
         text-decoration: none;
-        color: lightskyblue;
+        color: rgba(235, 89, 57, 1);
         font-size: 1.3rem;
     }
 </style>
