--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -22,7 +22,7 @@
     }
     .contact-item a {
         text-decoration: none;
-        color: lightskyblue;
+        color: rgba(235, 89, 57, 1);
         font-size: 1.3rem;
     }
 </style>
