--- a/views/partials/main.ejs
+++ b/views/partials/main.ejs
@@ -11,7 +11,7 @@
     padding: 5px;
 }
 .root-menu-item a {
-    color: lightskyblue;
+    color: rgba(235, 89, 57, 1);
     text-decoration: none;
     font-weight: bold;
     font-size: 1.3rem;
