--- a/views/partials/menus/admin-nav.ejs
+++ b/views/partials/menus/admin-nav.ejs
@@ -18,7 +18,7 @@
         width: fit-content;
         min-width: 150px;
         text-align: center;
-        border-right: solid 1px lightskyblue;
+        border-right: solid 1px rgba(235, 89, 57, 1);
         padding: 0;
     }
     .admin-nav-item:last-of-type {
@@ -27,7 +27,7 @@
     .admin-nav-item a {
         text-decoration: none;
         text-align: center;
-        color: lightskyblue;
+        color: rgba(235, 89, 57, 1);
         font-size: 1.2rem;
     }
 
@@ -63,7 +63,7 @@
     .admin-nav-item a {
         text-decoration: none;
         text-align: center;
-        color: lightskyblue;
+        color: rgba(235, 89, 57, 1);
         font-size: 1.2rem;
     }
 
@@ -77,7 +77,7 @@
     <div class="admin-nav-item"><a href="/admin/products">Products</a></div>
     <div class="admin-nav-item"><a href="/admin/manufacturers">Manufacturers</a></div>
     <div class="admin-nav-item"><a href="/admin/users">Users</a></div>
-    <div class="admin-nav-item"><a href="/admin/raffle">Raffle</a></div>
+    <div class="admin-nav-item" style="display: none;"><a href="/admin/raffle">Raffle</a></div>
     <div class="admin-nav-item"><a href="/admin/admin-accounts">Your Accounts</a></div>
     <div class="admin-nav-item"><a href="/admin/help">Help</a></div>
 </div>
