--- a/views/todo-list.ejs
+++ b/views/todo-list.ejs
@@ -7,7 +7,7 @@
         margin-top: 20px;
         text-align: center;
         box-shadow: 4px 4px 4px 0px #d1d9e6, -4px -4px 4px 0px #fff;
-        color: lightskyblue;
+        color: rgba(235, 89, 57, 1);
     }
 
     .add-todo-form h5 {
@@ -44,7 +44,7 @@
         border-radius: 16px;
         background: #ecf0f3;
         box-shadow: 4px 4px 4px 0px #d1d9e6, -4px -4px 4px 0px #fff;
-        color: lightskyblue;
+        color: rgba(235, 89, 57, 1);
     }
 
     .todo-container {
@@ -59,7 +59,7 @@
     }
 
     .todo-container-header h3 {
-        color: lightskyblue;
+        color: rgba(235, 89, 57, 1);
         font-family: 'Roboto', sans-serif;
         font-size: 1.5rem;
     }
@@ -97,7 +97,7 @@
     }
 
     .feature-header p {
-        color: lightskyblue;
+        color: rgba(235, 89, 57, 1);
     }
 </style>
 
@@ -158,7 +158,7 @@
                         </h5>
                         <p style="color: #000">
                             For Route: 
-                            <span style="color: lightskyblue;">
+                            <span style="color: rgba(235, 89, 57, 1);">
 
                                 <%= todo.for_route %>
                             </span>
