--- a/views/todo.ejs
+++ b/views/todo.ejs
@@ -7,7 +7,7 @@
         margin-top: 20px;
         text-align: center;
         box-shadow: 4px 4px 4px 0px #d1d9e6, -4px -4px 4px 0px #fff;
-        color: lightskyblue;
+        color: rgba(235, 89, 57, 1);
     }
     .add-todo-form h5 {
         text-align: center;
@@ -40,7 +40,7 @@
         border-radius: 16px;
         background: #ecf0f3;
         box-shadow: 4px 4px 4px 0px #d1d9e6, -4px -4px 4px 0px #fff;
-        color: lightskyblue;
+        color: rgba(235, 89, 57, 1);
     }
     .todo-container {
         width: 90%;
@@ -52,7 +52,7 @@
         text-align: center;
     }
     .todo-container-header h3 {
-        color: lightskyblue;
+        color: rgba(235, 89, 57, 1);
         font-family: 'Roboto', sans-serif;
         font-size: 1.5rem;
     }
@@ -83,7 +83,7 @@
         word-break: break-all;
     }
     .feature-header p {
-        color: lightskyblue;
+        color: rgba(235, 89, 57, 1);
     }
 </style>
 
