--- a/views/user/payment.ejs
+++ b/views/user/payment.ejs
@@ -15,7 +15,7 @@
         padding: 12px;
         margin-bottom: 5px;
         font-family: 'Roboto', sans-serif;
-        color: lightskyblue;
+        color: rgba(235, 89, 57, 1);
         font-size: 1.2rem;
     }
 
@@ -31,7 +31,7 @@
 
     .user-details-link a {
         padding: 10px;
-        color: lightskyblue;
+        color: rgba(235, 89, 57, 1);
         text-decoration: none;
     }
 </style>
