--- a/views/user/raffle-none.ejs
+++ b/views/user/raffle-none.ejs
@@ -5,7 +5,7 @@
     }
         .unclaimed-raffles-header {
         font-size: 1.5rem;    
-        color: lightskyblue;
+        color: rgba(235, 89, 57, 1);
         margin-bottom: 15px;
         text-align: center;
     }
@@ -26,7 +26,7 @@
 
     .id-data {
         text-align: center;
-        border-bottom: solid 1px lightskyblue;
+        border-bottom: solid 1px rgba(235, 89, 57, 1);
         padding-bottom: 10px;
         margin-bottom: 10px;
     }
@@ -52,7 +52,7 @@
         padding: 8px;
     }
     .item-data a {
-        color: lightskyblue;
+        color: rgba(235, 89, 57, 1);
         text-decoration: none;
     }
     .item-data img {
@@ -70,7 +70,7 @@
         border-radius: 8px;
     }
     .raffle-item-claim a {
-        color: lightskyblue;
+        color: rgba(235, 89, 57, 1);
         text-decoration: none;
         font-family: 'Roboto', sans-serif;
         font-size: 1.2rem;
@@ -83,7 +83,7 @@
             margin: 0 auto;
             margin-top: 0;
             padding: 15px;
-            color: lightskyblue;
+            color: rgba(235, 89, 57, 1);
             font-size: 1.3rem;
             text-shadow: 0 0 2px #000;
             font-weight: bold;
@@ -129,7 +129,7 @@
                     <h6>Prize</h6>
                     <p><%= raffle.raffle_product.manufacturer.name %></p>
                     <p><%= raffle.raffle_product.name %></p>
-                    <p>Worth: $<span style='color:red;text-decoration:line-through'><span style="color: #000"><%= raffle.raffle_product.price.base %></span></span> <span style="font-family: 'Roboto', sans-serif; color: lightskyblue;">FREE!</span></p>
+                    <p>Worth: $<span style='color:red;text-decoration:line-through'><span style="color: #000"><%= raffle.raffle_product.price.base %></span></span> <span style="font-family: 'Roboto', sans-serif; color: rgba(235, 89, 57, 1);">FREE!</span></p>
                     <img src="<%= raffle.raffle_product.main_image %>" alt="">
                 </div>
                 <div class="raffle-item-claim">
