--- a/views/user/raffle.ejs
+++ b/views/user/raffle.ejs
@@ -21,12 +21,12 @@
     #raffleHeader h2 {
         font-size: 1.5rem;
         padding-left: 20px;
-        color: lightskyblue;
+        color: rgba(235, 89, 57, 1);
         font-family: 'Roboto', sans-serif;
     }
 
     #raffleHeader i {
-        color: lightskyblue;
+        color: rgba(235, 89, 57, 1);
         font-size: 2rem;
         padding-right: 20px;
     }
@@ -59,7 +59,7 @@
         text-decoration: none;
         font-size: 1.5rem;
         font-family: 'Roboto', sans-serif;
-        color: lightskyblue;
+        color: rgba(235, 89, 57, 1);
         text-shadow: 0 0 5px rgba(127, 198, 241, 0.5);
         display: block;
         transition: ease-in 0.5s;
@@ -71,7 +71,7 @@
         text-decoration: none;
         font-size: 1.5rem;
         font-family: 'Roboto', sans-serif;
-        color: lightskyblue;
+        color: rgba(235, 89, 57, 1);
         text-shadow: 0 0 5px rgba(127, 198, 241, 0.5);
         display: block;
         transition: ease-in 0.5s;
@@ -125,7 +125,7 @@
         border: none;
         font-family: 'Roboto', sans-serif;
         font-size: 1.2rem;
-        color: lightskyblue;
+        color: rgba(235, 89, 57, 1);
         background: #ecf0f3;
         border-radius: 8px;
     }
@@ -158,7 +158,7 @@
         margin-left: 5px;
     }
     .ticket li::marker {
-        color: lightskyblue;
+        color: rgba(235, 89, 57, 1);
         font-size: 2rem;
 
     }
@@ -168,7 +168,7 @@
     }
     .ticket-header h3 {
         font-size: 1.5rem;
-        color: lightskyblue;
+        color: rgba(235, 89, 57, 1);
         font-family: 'Roboto', sans-serif;
     }
     .claim-prize {
@@ -178,7 +178,7 @@
     }
     .claim-prize a {
         text-decoration: none;
-        color: lightskyblue;
+        color: rgba(235, 89, 57, 1);
         font-size: 1.2rem;
     }
     .claim-prize p {
@@ -234,7 +234,7 @@
     </ol>
 </div>
 <% } %>
-<div id="raffleContainer" class="raffle-overlay">
+<div id="raffleContainer" class="raffle-overlay" style="display: none;">
     <a href="javascript:void(0)" class="closebtn" onclick="closeRaffle()">&times;</a>
     <div id="currentRafflePrize" class="current-raffle-prize">
         <a href="/products/manufacturer/<%= currentRafflePrize.manufacturer.id %>/product/<%= currentRafflePrize.id %>">
@@ -259,7 +259,7 @@
     </div>
 
 </div>
-<div id="raffleHeader">
+<div id="raffleHeader" style="display: none;">
     <h2>Raffle</h2>
     <p>$<%= currentRaffle.ticket_price %>/ea</p>
     <span onclick="openRaffle()"><i id="openRaffle" class="fa-solid fa-caret-up"></i></span>
